Fix footer link bug on mobile

--- a/light.css
+++ b/light.css
@@ -623,6 +623,7 @@ strong {
 			}
 
 			.site-footer p { font-size: 15px; font-weight: 400; position: fixed; top: 90%; text-align: center; left: 15%; right: 15%;}
+			.site-footer a { display: inline;}
 
 			.toggle a, a:visited {
 
